--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
             <button type="submit" id="newTask">+</button>
         </form>
 
-        <ul class="task-list">
-            <li class="task-item">
-                <input type="checkbox" id="item-check">
-                
-            </li>    
+        <ul class="task-list" id="taskListUL">
+               
         </ul>
     </div>
 
