--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <div class="main-container">
         <div class="stats-container">
             <div class="stats-details">
-                <h1>TODO</h1>
-                <p>some text</p>
+                <h1>ToDo List</h1>
+                <p>Add and Monitor your Tasks</p>
                 <div id="progress-bar">
                     <div id="progress">
                         
                     </div>
                 </div>
             </div>
-            <div class="stats-pie">
-                1/3
+            <div class="stats-pie" id="progress-number">
+                0/0
             </div>
         </div>
 
